using UnityEngine;public class PlayerAnimation_LouieWilliamson : M{bool q;Animator w;Rigidbody2D e;public void QE(){if (q){if (transform.localScale.x < 0){FlipSprite();}}w.SetTrigger("isAttacking");}public void RollAnimation(bool isRolling){w.SetBool("isRolling", isRolling);}public void Crouching(bool isCrouching){w.SetBool("isCrouching", isCrouching);}void Start(){q = true;w = GetComponent<Animator>();e = GetComponent<Rigidbody2D>();}void Update(){if (e.velocity.x != 0 || e.velocity.y != 0){w.SetTrigger("isMoving");}else {w.SetTrigger("isIdle");}if (e.velocity.x < 0){if (!q){FlipSprite();q = true;}}else if (e.velocity.x > 0){if (q){FlipSprite();q = false;}}if (e.velocity.y < 0){w.SetBool("isFacing" , true);}else if (e.velocity.y > 0){w.SetBool("isFacing", false);}}void FlipSprite(){transform.localScale = new Vector3(transform.localScale.x * -1, transform.localScale.y, transform.localScale.z);}}